Fix preload crossorigin

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
     <script crossorigin='anonymous' src="/packs/js/locales.js"></script>
     <script crossorigin='anonymous' src="/packs/js/locales/glitch/en.js"></script>
 
-    <link rel='preload' as='script' crossorigin='anonymous' href='/packs/js/flavours/glitch/async/getting_started.js'>
-    <link rel='preload' as='script' crossorigin='anonymous' href='/packs/js/flavours/glitch/async/compose.js'>
-    <link rel='preload' as='script' crossorigin='anonymous' href='/packs/js/flavours/glitch/async/home_timeline.js'>
-    <link rel='preload' as='script' crossorigin='anonymous' href='/packs/js/flavours/glitch/async/notifications.js'>
+    <link rel='preload' as='script' href='/packs/js/flavours/glitch/async/getting_started.js'>
+    <link rel='preload' as='script' href='/packs/js/flavours/glitch/async/compose.js'>
+    <link rel='preload' as='script' href='/packs/js/flavours/glitch/async/home_timeline.js'>
+    <link rel='preload' as='script' href='/packs/js/flavours/glitch/async/notifications.js'>
     <script id='initial-state' type='application/json'>{}</script>
 
     <script src="/verify-state.js"></script>
