--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,17 @@
     <link rel="manifest" type="applicaton/manifest+json" href="/manifest.json" />
 
     <meta name="theme-color" content="#282c37" />
+    <meta content='/deck/getting-started' name='initialPath' />
 
-    <script crossorigin='anonymous' src="/packs/js/locales.js"></script>
-    <script crossorigin='anonymous' src="/packs/js/locales/glitch/en.js"></script>
-
-    <link rel='preload' as='script' href='/packs/js/flavours/glitch/async/getting_started.js'>
-    <link rel='preload' as='script' href='/packs/js/flavours/glitch/async/compose.js'>
-    <link rel='preload' as='script' href='/packs/js/flavours/glitch/async/home_timeline.js'>
-    <link rel='preload' as='script' href='/packs/js/flavours/glitch/async/notifications.js'>
+    <link rel='preload' as='script' href='/packs/js/locales/glitch/en-json.js' />
+    <link rel='preload' as='script' href='/packs/js/flavours/glitch/async/getting_started.js' />
+    <link rel='preload' as='script' href='/packs/js/flavours/glitch/async/compose.js' />
+    <link rel='preload' as='script' href='/packs/js/flavours/glitch/async/home_timeline.js' />
+    <link rel='preload' as='script' href='/packs/js/flavours/glitch/async/notifications.js' />
     <script id='initial-state' type='application/json'>{}</script>
 
     <script src="/verify-state.js"></script>
+    <script src="/packs/js/common.js"></script>
     <script src="/packs/js/core/common.js"></script>
     <link rel="stylesheet" media="all" href="/packs/css/core/common.css" />
 
