Remove /deck prefix

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" type="applicaton/manifest+json" href="/manifest.json" />
 
     <meta name="theme-color" content="#282c37" />
-    <meta content='/deck/getting-started' name='initialPath' />
+    <meta content='/getting-started' name='initialPath' />
 
     <link rel='preload' as='script' href='/packs/js/locales/glitch/en-json.js' />
     <link rel='preload' as='script' href='/packs/js/flavours/glitch/async/getting_started.js' />
